# gsi-cs2-rs

./: Cargo.toml  LICENSE  README.md
examples/: async.rs  auth.rs  multiple.rs  payload.rs  stats.rs  weapons.rs
gsi_cfg/: gamestate_integration_fast.cfg  gamestate_integration_normal.cfg
src/: bomb.rs  grenades.rs  lib.rs  map.rs  phase_countdowns.rs  player.rs  provider.rs  round.rs  team.rs  weapon.rs
src/payload/: grenades.rs  map.rs  mod.rs  player.rs  round.rs  team.rs  weapon.rs
