[package]
name = "gsi-csgo"
description = "A library containing ready-made structures for deserializing or reverse serializing data provided by CSGO GSI using serde. With examples."
version = "0.1.1"
edition = "2021"
authors = ["Sam Miller"]
documentation = "https://docs.rs/gsi-csgo"
homepage = "https://github.com/sam-ai56/gsi-csgo"
repository = "https://github.com/sam-ai56/gsi-csgo"
readme = "README.md"
license = "MIT"
keywords = ["csgo-gsi", "gsi", "csgo", "valve"]
categories = ["games", "parsing", "encoding", "api-bindings"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
poem = "1.3.48"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16" }