[package]
name = "gsi-cs2"
description = "DESCRIPTION"
version = "0.1.0"
edition = "2021"
authors = ["Sam Miller"]
documentation = "https://docs.rs/gsi-cs2"
homepage = "https://github.com/sam-ai56/gsi-cs2-rust"
repository = "https://github.com/sam-ai56/gsi-cs2-rust"
readme = "README.md"
license = "MIT"
keywords = ["csgo-gsi", "gsi", "csgo", "valve"] 
categories = ["games", "parsing", "encoding", "api-bindings"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
poem = "1.3.48"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs"] }
tracing-subscriber = { version = "0.3.16" }